Refactoring Files ( Home page, static files)

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,7 @@
 <%- include('partials/header'); -%>
+<section id='home'>
+    <h1>Hello World</h1>
+</section>
+    
 
-    <body>
-        <h1>Hello World
-
-        </h1>
-
-    </body>
-
-    </html>
+    <%- include('partials/footer'); -%>
