EJS VIEWS CREATED
success.ejs , profile.ejs , dom folder creation

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,7 @@
 
 </head>
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #191414;">
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #191414;">
     <a class="navbar-brand" href="/">
       <img src="/images/navbar-icon.png" width="30" height="30" class="d-inline-block align-top" alt="spotify-icon">
       SpotiSong
@@ -31,13 +31,21 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Features</a>
+        <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/profile">Profile</a>
         <a class="nav-item nav-link" href="#">Pricing</a>
         <a class="nav-item nav-link disabled" href="#">Disabled</a>
       </div>
+      <div class="navbar-nav ml-auto">
+        <a class="nav-item nav-link" href="/login">Login</a>
+      </div>
     </div>
+
   </nav>
 </header>
 
 <body>
+  <div class="bg"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
+  
