--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header'); -%>
-    <section id='home'>
-        <h1>Hello World</h1>
-    </section>
-
+<section id='home'>
+    <h1>Success</h1>
+</section>
+    
 
     <%- include('partials/footer'); -%>
