--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -45,7 +45,7 @@
 </header>
 
 <body>
-  <div class="bg"></div>
+  <!-- <div class="bg"></div>
   <div class="bg bg2"></div>
-  <div class="bg bg3"></div>
+  <div class="bg bg3"></div> -->
   
