--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,24 @@
 <%- include('partials/header'); -%>
     <section id='home'>
-        <h1>Hello World</h1>
+        <section id='jumbotron'>
+            <h1><img src="/images/navbar-icon.png" width="50" height="50" class="d-inline-block align-top" alt="spotify-icon"> SpotiSong</h1>
+            <p>Add the song of the day to your playlist.</p>
+        </section>
+        
     </section>
+    <div class="container-fluid bg-grey">
+        <div class="row">
+          <div class="col-sm-4">
+            <span class="glyphicon glyphicon-globe logo slideanim"></span>
+          </div>
+          <div class="col-sm-8">
+            <h2>Our Values</h2><br>
+            <h4><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
+            <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+      </div>
 
 
     <%- include('partials/footer'); -%>
