--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,38 +1,34 @@
 <%- include('partials/header'); -%>
-    <section id='home'>
-        <h1>Profile Info</h1>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <h3>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <section id='padding-section'>
+        <table class="table">
+            <thead>
+                <h1>Profile Info</h1>
+                <tr>
+                    <td scope="col">
                         <%=body.display_name%>
-                    </h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm">
-                    <h3>
+                    </td>
+                    <td scope="row">
                         <%=body.email%>
-                    </h3>
-                </div>
-                <div class="col-sm-12 col-lg-6 col-md-6">
-                    <h3>Total Followers: 
-                        <%=body.followers.total%>
-                    </h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm">
-                    <h3>
+                    </td>
+
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+
+                    <td>Total Followers: <%=body.followers.total%>
+                    </td>
+                    <td scope="row">
                         <a href="<%=body.external_urls.spotify%>">
                             <%=body.external_urls.spotify%>
                         </a>
-                    </h3>
-
-                </div>
-            </div>
-
-        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </section>
 
 
