--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,7 +2,7 @@
     <div class="bg"></div>
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
-    <section id='padding-section'>
+    <div class='padding-section'>
         <table class="table">
             <thead>
                 <h1>Profile Info</h1>
@@ -29,7 +29,7 @@
                 </tr>
             </tbody>
         </table>
-    </section>
+    </div>
 
 
     <%- include('partials/footer'); -%>
