--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,7 +1,10 @@
 <%- include('partials/header'); -%>
-<section id='padding-section'>
-    <h1>Success</h1>
-</section>
-    
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <div class='padding-section'>
+        <h1>Successful Authentication</h1>
+    </div>
+
 
     <%- include('partials/footer'); -%>
