--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,24 +1,50 @@
 <%- include('partials/header'); -%>
-    <section id='home'>
-        <section id='jumbotron'>
-            <h1><img src="/images/navbar-icon.png" width="50" height="50" class="d-inline-block align-top" alt="spotify-icon"> SpotiSong</h1>
-            <p>Add the song of the day to your playlist.</p>
-        </section>
-        
-    </section>
-    <div class="container-fluid bg-grey">
-        <div class="row">
-          <div class="col-sm-4">
-            <span class="glyphicon glyphicon-globe logo slideanim"></span>
-          </div>
-          <div class="col-sm-8">
-            <h2>Our Values</h2><br>
-            <h4><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-            <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
+
+  <section id='jumbotron'>
+
+    <h1><img src="/images/navbar-icon.png" width="50" height="50" class="d-inline-block align-top" alt="spotify-icon">
+      SpotiSong</h1>
+    <p>Add the song of the day to your playlist.</p>
+    <form action="/start" method="post">
+      <button type="submit" class="btn btn-outline-light btn-lg">
+        Get Started!
+      </button>
+    </form>
+
+
+  </section>
+  <div class='padding-section about'>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-4">
+          <i class="bi bi-music-note-beamed music-icon"></i>
+        </div>
+        <div class="col-sm-8 about-text">
+          <h2>Easy way to explore new Songs!!</h2><br>
+          <h4><strong>ABOUT: </strong> This web application helps you to explore and add new songs into your spotify
+            playlist with help of our interesting song seaching algorithm.</h4><br>
+          <p><strong>VISION:</strong> To create a revolutionary product to disrupt the music industry.</p>
         </div>
       </div>
+    </div>
+  </div>
+  <div class='padding-section learn'>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-8 learn-text">
+          <h2>Learning Objective</h2><br>
+          <h4><strong>Frameworks & Libraries</strong> HTML , CSS , JS , NODE JS , JQUERY , EXPRESS , BOOTSTRAP</h4>
+          <br>
+          <p><strong>Learning: </strong>Creating a Landing Page , Learnt about spotify api , RESTful api</p>
+        </div>
+        <div class="col-sm-4">
+          <i class="bi bi-journal-code book-icon"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- </section> -->
 
 
-    <%- include('partials/footer'); -%>
+  <%- include('partials/footer'); -%>
