--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,8 +36,8 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="/profile">Profile</a>
-        <a class="nav-item nav-link" href="#">Pricing</a>
-        <a class="nav-item nav-link disabled" href="#">Disabled</a>
+        <a class="nav-item nav-link" href="/sod">SOD</a>
+        <!-- <a class="nav-item nav-link disabled" href="#">Disabled</a> -->
       </div>
       <div class="navbar-nav ml-auto">
         <a class="nav-item nav-link" href="/login">Login</a>
