--- a/views/sod.ejs
+++ b/views/sod.ejs
@@ -2,15 +2,23 @@
 
     <div class='padding-section'>
         <h1>Song of the day!</h1>
-        <div>
-            <h3>
-                <%=name%>
-            </h3>
-            <audio controls="controls">
-                <source src ="<%=url%>"type="audio/mpeg">
-            </audio>
-            <h4>Song Preview</h4>
-        </div>
+
+        <h3>
+            <%=name%>
+        </h3>
+        <audio controls="controls">
+            <source src="<%=url%>" type="audio/mpeg">
+        </audio>
+        <h4>Song Preview</h4>
+        <hr>
+        <h2>Select Playlist</h2>
+
+          
+           
+                    <% playlistUser.items.description %>
+
+               
+   
     </div>
 
 
