--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,7 +6,11 @@ html {
 }
 
 body {
+  min-height: 100vh;
   margin: 0;
+
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 .bg {
@@ -96,6 +100,11 @@ h1 {
   font-size: 10rem;
 }
 
+/* SOD Styles */
+.playlist {
+  float: right;
+}
+
 /* Footer  */
 
 footer {
@@ -103,11 +112,6 @@ footer {
 }
 
 .footer {
-  position: fixed;
-  padding: 1.2% 1.2%;
-  left: 0;
-  bottom: 0;
-  width: 100%;
   background-color: #000000;
   color: white;
   text-align: center;
