--- a/views/sod.ejs
+++ b/views/sod.ejs
@@ -29,7 +29,8 @@
                             <%=data.id%>
                         </td>
                         <td>
-                            <input type="radio" name="radVal" value=" <%=data.id%>" />
+                            <input type="radio" name="radVal" value="<%=data.id%>" />
+                            <input type="hidden" name="songVal" value="<%=songuri%>" />
                         </td>
                     </tr>
                     <% }); %>
