--- a/views/success.ejs
+++ b/views/success.ejs
@@ -4,7 +4,7 @@
     <div class="bg bg3"></div>
     <div class='padding-section'>
         <h1>Successful Authentication</h1>
-        <button type="button" class="btn btn-success" onclick="window.location.href = 'http://localhost:3000/sod';">Add Songs to Your Playlist !</button>
+        <button type="button" class="btn btn-success" onclick="window.location.href = 'http://nameless-river-99592.herokuapp.com/sod';">Add Songs to Your Playlist !</button>
     </div>
 
 
